--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -341,7 +341,10 @@ a {
     opacity: 0.8;
     background: #ccc;
   }
-
+.fix-link{
+  text-decoration: none !important;
+    color: black !important;
+}
 @media all and (max-width: 1100px) {
   .cham {
     left: 48.6%;
