--- a/public/css/imag360.css
+++ b/public/css/imag360.css
@@ -1,12 +1,12 @@
 body{
     margin: 0;
-    overflow: hidden;
+    
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
 .tour{
-    background: #074357;
-    height: 100vh;
+  
+    background-color: #fdfdf6;
     margin: 0;
 }
 
@@ -19,19 +19,17 @@ h2{
     text-align: center;
     margin-bottom: 50px;
 }
-
-.image-container{
-    height: 26.190rem;
-
+.panolens-canvas{
+    /* height: 100% !important; */
+}
+.image360-container{
+    height: 80vh !important;
     position: relative;
-    width: 78%;
     display: block;
     margin: 0 auto;
-    margin-left: 12%;
     overflow: hidden;
-    
-  border: 2px solid #ebb47a;
-  border-radius: 10px;
+    border: 2px solid #ccc;
+    border-radius: 15px;
 }
 
 canvas{
