--- a/public/css/supplier.css
+++ b/public/css/supplier.css
@@ -46,6 +46,12 @@
   width: 71%;
   left: 400px;
 }
+.table-hotel1 {
+  position: absolute;
+  top: 100px;
+  width: 71%;
+  left: 400px;
+}
 .search-add {
   position: absolute;
   left: 396px;
