--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -18,23 +18,23 @@ body{
         border-left: 5px solid  #ffc107 !important;
     }
     
-    .table-hotel1 .row {
+    /* .table-hotel1 .row {
         display: flex;
         flex-wrap: wrap;
       }
-      
-      .table-hotel1 .col {
+       */
+      /* .table-hotel1 .col {
         flex: 1;
         min-width: 250px;
-      }
+      }  */
       
-      .chart-card {
+      /* .chart-card {
         flex: 1;
         min-width: 300px;
         margin: 3px 10px;
       }
-      
-      @media (max-width: 768px) {
+       */
+      /* @media (max-width: 768px) {
         .chart-card {
           width: 100% !important;
           margin: 10px 0 !important;
@@ -43,21 +43,10 @@ body{
         .table-hotel1 .row {
           flex-direction: column;
         }
-      }
-      
-      @media (min-width: 769px) and (max-width: 1024px) {
-        .chart-card {
-          width: 48% !important;
-          margin: 1%;
-        }
-      
-        .table-hotel1 .row {
-          justify-content: space-between;
-        }
-      }
-      
+      } */
 
-    .card {
+
+    /* .card {
         position: relative;
         display: flex;
         flex-direction: column;
@@ -69,7 +58,7 @@ body{
         border-radius: .25rem;
         margin-bottom: 1.5rem;
         box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
-    }
+    } */
     .bg-gradient-scooter {
         background: #17ead9;
         background: -webkit-linear-gradient( 
@@ -89,6 +78,7 @@ body{
         font-size: 27px;
         border-radius: 10px;
     }
+   
     .rounded-circle {
         border-radius: 50%!important;
     }
@@ -126,4 +116,4 @@ body{
         background: linear-gradient( 
     45deg
      , #ffdf40, #ff8359)!important;
-    }
+    } 
