--- a/public/css/supplier.css
+++ b/public/css/supplier.css
@@ -6,7 +6,7 @@
 }
 .nav-supllier {
   background: #1f1c17;
-  position: absolute;
+  position: fixed;
   top: 0;
   min-height: 100%;
 }
@@ -45,6 +45,12 @@
   top: 200px;
   width: 71%;
   left: 400px;
+}
+.table-profile {
+  position: absolute;
+  top: 95px;
+  width: 90%;
+  left: 290px; 
 }
 .search-add {
   position: absolute;
