--- a/public/css/supplier.css
+++ b/public/css/supplier.css
@@ -1,3 +1,10 @@
+.table-hotel1 {
+  position: absolute;
+  top: 165px;
+  width: 75%;
+  left: 350px;
+}
+
 .bg-background {
   display: none;
 }
@@ -42,24 +49,25 @@
 
 .table-hotel {
   position: absolute;
-  top: 200px;
-  width: 71%;
-  left: 400px;
+  top: 165px;
+  width: 77%;
+  left: 334px;
 }
 .table-profile {
   position: absolute;
-  top: 95px;
-  width: 90%;
-  left: 290px; 
+  top: 120px;
+  width: 60%;
+  left: 400px;
 }
 .search-add {
   position: absolute;
   left: 396px;
-  top: 145px;
+  top: 152px;
   width: 60%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  z-index: 20;
 }
 .breadcrumb{
   left: 396px;
@@ -144,7 +152,21 @@ border: 1px solid #ccc;
 padding: 0px 8px;
 border-radius: 12px;
 }
+@media all and (min-width: 1024px) and (max-width: 1480px) {
+  .table-hotel {
+    width: 66%;
+  }
+  .table-hotel1{
+    width: 60%;
+  }
+}
 @media all and (max-width: 1024px) {
+  .table-hotel1 {
+    position: absolute;
+    top: 165px;
+    width: 73%;
+    left: 58px;
+}
   .pc-none {
     display: block;
   }
@@ -162,7 +184,7 @@ border-radius: 12px;
     min-height: 100%;
     right: 0;
     display: block;
-    z-index: 2;
+    z-index: 100;
   }
   .fix-border {
     transition: margin-left 0.3s ease-in-out, width 0.3s ease-in-out;
@@ -176,7 +198,7 @@ border-radius: 12px;
     font-size: 37px;
     position: absolute;
     right: 20px;
-    top: 62px;
+    top: 20px;
     cursor: pointer;
   }
   .overlay {
@@ -186,7 +208,7 @@ border-radius: 12px;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Màu nền với độ mờ */
-    z-index: 1; /* Đảm bảo overlay được hiển thị trên các phần tử khác */
+    z-index: 100; /* Đảm bảo overlay được hiển thị trên các phần tử khác */
     display: none; /* Ban đầu ẩn overlay */
   }
 
@@ -196,13 +218,29 @@ border-radius: 12px;
   .search-add {
     left: 0;
   }
+  .table-profile{
+    width: 100%;
+    left: 0;
+  }
 }
 @media all and (max-width: 768px) {
   .search-add {
     left: 100px;
   }
+  .table-hotel1 {
+    position: absolute;
+    top: 165px;
+    width: 73%;
+    left: 58px;
+}
 }
 @media all and (max-width: 678px) {
+  .table-hotel1 {
+    position: absolute;
+    top: 165px;
+    width: 80%;
+    left: 20px;
+}
   .button-add {
     font-size: 12px;
   }
@@ -218,7 +256,19 @@ border-radius: 12px;
   .table-hotel {
     left: 50px;
   }
+  .table-hotel1 {
+   
+    width: 90%;
+
+}
   .ml-4rem {
     margin-left: 4rem;
   }
+}
+
+@media all and (max-width: 400px) {
+.fix-title-400{
+  display: none;
+}
+
 }
