--- a/public/css/supplier.css
+++ b/public/css/supplier.css
@@ -69,7 +69,7 @@
   align-items: center;
   z-index: 20;
 }
-.breadcrumb{
+.breadcrumb {
   left: 396px;
   top: 145px;
   width: 60%;
@@ -127,36 +127,39 @@
 .pc-none {
   display: none;
 }
-.color-active{
-  color: #24CD7C;
+.color-active {
+  color: #24cd7c;
   font-weight: bold;
 }
-.color-stop{
-  color: #F10B34;
+.color-stop {
+  color: #f10b34;
   font-weight: bold;
-
 }
-.bk-top-table{
-  background: #D9D9D9;
+.color-paid {
+  color: #ff7f50;
+  font-weight: bold;
 }
-.border-solid{
+.bk-top-table {
+  background: #d9d9d9;
+}
+.border-solid {
   border: 1px solid #ccc;
 }
 .bottom-logout p:hover {
- color: #D9D9D9;
+  color: #d9d9d9;
 }
-.active{
-color: #ffffff;
-background: #305A61;
-border: 1px solid #ccc;
-padding: 0px 8px;
-border-radius: 12px;
+.active {
+  color: #ffffff;
+  background: #305a61;
+  border: 1px solid #ccc;
+  padding: 0px 8px;
+  border-radius: 12px;
 }
 @media all and (min-width: 1024px) and (max-width: 1480px) {
   .table-hotel {
     width: 66%;
   }
-  .table-hotel1{
+  .table-hotel1 {
     width: 60%;
   }
 }
@@ -166,7 +169,7 @@ border-radius: 12px;
     top: 165px;
     width: 73%;
     left: 58px;
-}
+  }
   .pc-none {
     display: block;
   }
@@ -218,7 +221,7 @@ border-radius: 12px;
   .search-add {
     left: 0;
   }
-  .table-profile{
+  .table-profile {
     width: 100%;
     left: 0;
   }
@@ -232,7 +235,7 @@ border-radius: 12px;
     top: 165px;
     width: 73%;
     left: 58px;
-}
+  }
 }
 @media all and (max-width: 678px) {
   .table-hotel1 {
@@ -240,7 +243,7 @@ border-radius: 12px;
     top: 165px;
     width: 80%;
     left: 20px;
-}
+  }
   .button-add {
     font-size: 12px;
   }
@@ -257,18 +260,15 @@ border-radius: 12px;
     left: 50px;
   }
   .table-hotel1 {
-   
     width: 90%;
-
-}
+  }
   .ml-4rem {
     margin-left: 4rem;
   }
 }
 
 @media all and (max-width: 400px) {
-.fix-title-400{
-  display: none;
-}
-
+  .fix-title-400 {
+    display: none;
+  }
 }
